# transformerlab-app

./: .coderabbit.yaml  .dockerignore  .env  .env.example  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PR-REVIEWS.md  README.md  docker-compose.test.yml  download_windows_api.bat  index.html  jest.config.js  knip.json  newrelic.ini  package-lock.json  package.json  playwright.config.ts  pyrightconfig.json  ruff.toml  skills-lock.json  tsconfig.json  vite.config.ts
api/: .env.example  README.md  api.py  install.sh  local_provider_conda_install.sh  localprovider_pyproject.toml  openapi.json  pyproject.toml  pytest.ini  remote_setup.sh  requirements-no-gpu-uv.txt  requirements-rocm-uv.txt  requirements-rocm.in  requirements-uv.txt  requirements.in  run.sh  startup_tasks.py
api/alembic/: env.py  utils.py
api/alembic/versions/: 1f7cb465d15a_add_unique_constraint_job_id_quota_usage.py  38d379ecd206_merge_team_providers_migrations_with_.py  46378c10f132_add_user_experiment_access_table.py  4937b0e0647c_add_indexes_to_users_teams_table.py  4af2ecb15ad0_add_org_storage_snapshot.py  598bc2e555d4_add_public_share_link.py  63ca6eebc24c_add_team_providers_tables.py  6478f985b1bc_add_team_storage_providers.py  64b507342a07_fix_oauth_account_schema.py  7eb412acff0c_check_oauth_changes.py  84accba9dc2c_config_unique_constraint.py  90042b8ff500_create_quota_tables.py  a1b2c3d4e5f6_add_disabled_to_compute_providers.py  a1b2c3d4e5f6_convert_uuid_columns_for_postgres.py  a3d2e5f8c901_create_asset_versions_table.py  aaab927fe564_add_storage_usage_snapshots_table.py  add_last_team_id_to_user.py  b4c3d6e9f012_add_metadata_fields_to_asset_versions.py  b9c0d1e2f3a4_add_team_storage_config.py  be6b6cb9f784_rename_team_providers_to_compute_.py  c175b784119c_create_oauth_account_table.py  c78d76a6d65c_add_team_id_to_config_table.py  ce15d079ccd0_create_oauth_account_table.py  d909009b42d0_add_oauth_account_table.py  f278bbaa6f67_create_api_keys_table.py  f7661070ec23_initial_migration_create_all_tables.py
api/docker/: README.md
api/docker/common/: Dockerfile
api/docker/cpu/: Dockerfile.cpu  README.md  deploy.ps1  deploy.sh  docker-compose.yml.tpl
api/docs/source/: conf.py  index.rst  modules.rst
api/scripts/: check_sizes_of_models.py  conda_activate.sh  create_user.py  increment_plugin_versions.py  on_server_start.py  remote_setup.sh  report_on_unconverted_db_methods.py  wait_for_server.py
api/scripts/aws/: aws.sh  awsservers.py
api/scripts/azure/: README.md
api/scripts/xml-rpc-client-example/: example-with-retries.py  example.py  train_example.py  training_client_example.py
api/test/: API.http  README.md  test_aws_provider.py  test_azure_provider.py  test_db_layer_imports.py  test_dstack_provider.py  test_experiment_access_service.py  test_experiment_tags_service.py  test_gcp_provider.py  test_job_service_status_history.py  test_lambda_provider.py  test_launch_storage_guard.py  test_members_visibility_service.py  test_notes_helpers.py  test_notification_storage_alert.py  test_org_storage_snapshot_model.py  test_provider_harness_hook_service.py  test_remote_workdir_cd.py  test_runpod_provider.py  test_share_link_service.py  test_show_gpus.py  test_spot_capability.py  test_storage_endpoints.py  test_storage_limits.py  test_storage_provider_schemas.py  test_storage_provider_service.py  test_storage_scan_worker.py  test_storage_service.py  test_storage_usage_service.py  test_storage_usage_snapshot_service.py  test_storage_usage_worker.py  test_team_service.py  test_vastai_provider.py
api/test/api/: conftest.py  test_api.py  test_asset_download_service.py  test_asset_upload_service.py  test_aws_credentials.py  test_azure_provider_endpoint.py  test_cache_service.py  test_compute_provider_group_contract.py  test_compute_provider_sweep_contract.py  test_config.py  test_data.py  test_dataset_download_files.py  test_dataset_service.py  test_diffusion.py  test_documents.py  test_evals.py  test_experiment_export.py  test_experiment_jobs.py  test_experiment_notes.py  test_experiment_service.py  test_export.py  test_group_schemas.py  test_group_status_service.py  test_interactive_gallery_utils.py  test_job_bulk_delete.py  test_job_delete_service.py  test_job_save_to_registry.py  test_job_service_group.py  test_jobs.py  test_jobs_metrics.py  test_juicefs_gateway.py  test_launch_template_juicefs.py  test_lifespan.py  test_model.py  test_model_download.py  test_model_gguf.py  test_model_service.py  test_model_upload.py  test_notification_service.py  test_openai_models.py  (+33 more)
api/test/compute_providers/: test_nebius_subnet.py  test_runpod_image.py
api/test/db/: test_db.py
api/test/installer/: test_install_dot_sh.py
api/test/plugin_sdk/: test_plugin.py
api/test/plugins/: plugin.schema.json  test_plugins_schema.py
api/test/server/: conftest.py  test_config.py  test_server_info.py
api/test/services/: test_job_chart_service.py  test_team_provider_endpoints.py  test_workspace_storage_diagnostics.py
api/test/shared/: test_galleries.py  test_ssl.py  test_worker_leader.py
api/test/tmp/: .gitignore
api/tlab_package_init/: __init__.py
api/transformerlab/: fastchat_openai_api.py  launch_header_text.txt
api/transformerlab/compute_providers/: __init__.py  aws-iam-requirements.md  aws.py  azure.py  base.py  (+15 more)
cli/: .gitignore  COMMANDS.md  README.md  ali_test.cast  build.sh  package-lock.json  package.json  pyproject.toml  sample_task.yaml  tsconfig.json
cli/src/: api.ts  cli.tsx  declarations.d.ts  endpoints.ts  ink-table.tsx  ui.tsx  utils.ts
cli/tests/: __init__.py  conftest.py  helpers.py  test_pypi_cache.py
cli2/: README.md  pyproject.toml
lab-sdk/: README.md  pyproject.toml
lab-sdk/tests/: conftest.py  test_dataset.py  test_dirs.py  test_dirs_job_paths.py  test_dirs_set_tfl_storage_uri.py  test_dirs_workspace.py  test_experiment.py  test_init_exports.py  test_job_and_labresource.py  test_lab_facade.py  test_model.py  test_storage_azure.py  test_storage_du.py  test_storage_juicefs.py  test_storage_nfs.py  test_storage_proxy.py  test_task.py
(+1605 files in other folders)
