[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Minimal package for dependency management only
# The actual code runs from transformerlab/ directory, not from this package
packages = ["tlab_package_init"]

[project]
name = "transformerlab-api"
version = "0.27.0"
description = "Transformer Lab API"
requires-python = ">=3.11"
dependencies = [
  # Common dependencies with same versions across all platforms
  "aiofiles==24.1.0",
  "alembic==1.17.2",
  "boto3==1.40.70",
  "datasets==3.6.0",
  "fastapi-users[sqlalchemy,oauth]==15.0.1",
  "httpx-oauth==0.16.1",
  "markitdown[all]==0.1.1",
  "pydantic>=2.0,<3.0",
  "transformerlab==0.0.82",
  "transformers==4.57.1",
  "wandb==0.23.1",
  "werkzeug==3.1.3",
  "uvicorn",
  "python-dotenv",
  "httpx",
  "sentry-sdk",
  "shortuuid",
  "huggingface-hub",
  "jinja2",
  "pyyaml",
  "requests",
  "paramiko",
  "skypilot",
  "aiohttp",
  "botocore",
  "pandas",
  "cryptography",
  "filelock",
  "anyio",
  "pillow",
  "numpy",
  "python-dateutil",
  "importlib-metadata",
  "pwdlib",
]

[project.optional-dependencies]
nvidia = [
  # NVIDIA-specific packages
  "torch==2.9.1",
  "torchaudio==2.9.1",
  "torchvision==0.24.1",
  "nvidia-ml-py==12.575.51",
  # Packages with versions (using no-gpu/nvidia versions)
  "accelerate==1.6.0",
  "aiosqlite==0.21.0",
  "einops==0.8.1",
  "fastapi==0.115.12",
  "mcp[cli]==1.9.1",
  "peft==0.15.2",
  "psutil==7.0.0",
  "python-dotenv==1.1.0",
  "scipy==1.15.2",
  "sentence-transformers==4.1.0",
  "sqlalchemy[asyncio]==2.0.40",
  "tensorboard==2.19.0",
  "tiktoken==0.9.0",
  "watchfiles==1.0.5",
]
rocm = [
  # ROCm-specific packages
  "torch==2.9.1+rocm6.4",
  "torchaudio==2.9.1+rocm6.4",
  "torchvision==0.24.1+rocm6.4",
  "pyrsmi==0.2.0",
  # Packages with ROCm-specific versions
  "accelerate==1.6.0",
  "aiosqlite==0.21.0",
  "einops==0.8.1",
  "fastapi==0.115.12",
  "mcp[cli]==1.9.1",
  "peft==0.15.2",
  "psutil==7.0.0",
  "python-dotenv==1.1.0",
  "scipy==1.15.2",
  "sentence-transformers==4.1.0",
  "sqlalchemy[asyncio]==2.0.40",
  "tensorboard==2.19.0",
  "tiktoken==0.9.0",
  "watchfiles==1.0.5",
]
cpu = [
  # CPU-specific packages
  "torch==2.9.1",
  "torchaudio==2.9.1",
  "torchvision==0.24.1",
  # Packages with versions (using no-gpu/cpu versions)
  "accelerate==1.6.0",
  "aiosqlite==0.21.0",
  "einops==0.8.1",
  "fastapi==0.115.12",
  "mcp[cli]==1.9.1",
  "nvidia-ml-py==12.575.51",
  "peft==0.15.2",
  "psutil==7.0.0",
  "python-dotenv==1.1.0",
  "scipy==1.15.2",
  "sentence-transformers==4.1.0",
  "sqlalchemy[asyncio]==2.0.40",
  "tensorboard==2.19.0",
  "tiktoken==0.9.0",
  "watchfiles==1.0.5",
]

[tool.deptry]
extend_exclude = [
    "transformerlab/plugins",
    "test",
    "scripts",
    ".venv"
]
