[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Minimal package for dependency management only
# The actual code runs from transformerlab/ directory, not from this package
packages = ["tlab_package_init"]

[project]
dependencies = [
  # Minimal dependencies for general/multiuser API installs
  "aiosqlite==0.20.0",
  "aiofiles==24.1.0",
  "alembic==1.17.2",
  "boto3==1.40.70",
  "datasets==3.6.0",
  "fastapi==0.115.12",
  "fastapi-users[sqlalchemy,oauth]==15.0.1",
  "httpx-oauth==0.16.1",
  "markitdown[all]==0.1.1",
  "mcp[cli]==1.9.1",
  "packaging==24.1",
  "psutil==7.0.0",
  "pydantic>=2.0,<3.0",
  "python-dotenv==1.1.0",
  "python-multipart==0.0.20",
  "sqlalchemy[asyncio]==2.0.40",
  "transformerlab==0.1.8",
  "transformerlab-inference==0.2.52",
  "uvicorn==0.35.0",
  "watchfiles==1.0.5",
  "werkzeug==3.1.3",
  "google-cloud-storage==2.18.2",
  "azure-storage-blob==12.28.0",
  "cashews==7.5.0",
]name = "transformerlab-api"
version = "0.27.0"
description = "Transformer Lab API"
requires-python = ">=3.11"
