[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Minimal package for dependency management only
# The actual code runs from transformerlab/ directory, not from this package
packages = ["tlab_package_init"]

[project]
dependencies = [
  # Minimal dependencies for general/multiuser API installs
  "aiosqlite==0.20.0",
  "aiofiles==25.1.0",
  "asyncpg==0.30.0",
  "alembic==1.18.4",
  "boto3==1.40.70",
  "datasets==3.6.0",
  "fastapi==0.125.0",
  "fastapi-users[sqlalchemy,oauth]==15.0.5",
  "httpx-oauth==0.16.1",
  "matplotlib==3.10.9",
  "nebius==0.3.77",
  "packaging==26.2",
  "psutil==7.2.2",
  "pydantic>=2.13.4,<3.0",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.32",
  "sqlalchemy[asyncio]==2.0.50",
  "transformerlab==0.1.42",
  "transformerlab-inference==0.2.52",
  "uvicorn==0.35.0",
  "watchfiles==1.2.0",
  "werkzeug==3.1.8",
  "google-cloud-storage==3.11.0",
  "azure-identity==1.25.3",
  "azure-mgmt-compute==34.1.0",
  "azure-mgmt-network==30.2.0",
  "azure-mgmt-resource==24.0.0",
  "azure-mgmt-authorization==4.0.0",
  "azure-storage-blob==12.30.0",
  "cashews==7.5.0",
  "paramiko==5.0.0",
]
name = "transformerlab-api"
version = "0.27.0"
description = "Transformer Lab API"
requires-python = ">=3.11"
