[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformerlab-cli"
version = "0.1.0"
description = "Transformer Lab CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
lab = "transformerlab_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.tcss", "*.css"]

[dependency-groups]
dev = [
    "pytest",
    "textual>=6.11.0",
    "typer[testing]",
]
