[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-cli"
version = "0.1.0"
description = "Transformer Lab CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
tlab = "transformerlab_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
