[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformerlab"
version = "0.0.45"
description = "Python SDK for Transformer Lab"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Transformer Lab", email = "developers@transformerlab.ai" }]
license = { file = "LICENSE" }
dependencies = ["werkzeug", "pytest", "wandb", "fsspec", "s3fs"]

[project.urls]
"Homepage" = "https://github.com/transformerlab/transformerlab-sdk"
"Bug Tracker" = "https://github.com/transformerlab/transformerlab-app/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
