[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformerlab"
version = "0.0.72"
description = "Python SDK for Transformer Lab"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Transformer Lab", email = "developers@lab.cloud" }]
license = { file = "LICENSE" }
dependencies = [
  "werkzeug",
  "pytest",
  "pytest-asyncio",
  "wandb",
  "fsspec",
  "s3fs",
  "aiofiles",
  "gcsfs",
]

[project.urls]
"Homepage" = "https://github.com/transformerlab/transformerlab-app"
"Bug Tracker" = "https://github.com/transformerlab/transformerlab-app/issues"

[project.scripts]
tfl-remote-trap = "lab.remote_trap:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
